[gd_scene load_steps=5 format=2]

[ext_resource path="res://Characters/Platformer/Platformer.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Characters/Health/Health.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0
height = 64.0

[node name="Platformer" type="KinematicBody2D"]
collision_mask = 14
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )

[node name="BulletPosition" type="Position2D" parent="Sprite"]
position = Vector2( 32, 32 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, 32 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Health" parent="." instance=ExtResource( 3 )]
[connection signal="health_depleted" from="Health" to="." method="_on_Health_health_depleted"]
